# unicode-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  unicode-config.cmake  unicode-config.cmake.in
.github/workflows/: build-windows.yml  ci.yml  ubuntu-per-arch.yml  x86-linux-clang.yml  x86-linux-gcc.yml  x86-windows-mingw.yml  x86_64-linux-clang.yml  x86_64-linux-gcc.yml  x86_64-macos-clang.yml  x86_64-windows-clang.yml  x86_64-windows-mingw.yml  x86_64-windows-msvc  x86_64-windows-msvc.yml
headers/unicode/: convert.h  error.h  length.h  type.h
include/unicode/: convert.h  error.h  length.h  type.h
source/: convert.cc  length.cc
sources/: convert.cc  length.cc
